--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     <a href="index.html">about me</a>
     <a href="skills.html">skills</a>
     <a href="funfact.html">fun-fact</a>
-    <a href="mailto:shivamkumarjha0825@gmail.com">contact</a>
+    <a href="mailto:shivamkumarjha0825@gmail.com">contact Me</a>
     <a href="team.html">Team Members</a>
+    <a href="mailto:shivamjha082001@gmail.com">Contact My Team</a>
 </nav>
 <button type="submit">
     <a href="resume-2nd year.pdf" target="_blank">resume
