--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 <nav>
     <a href="index.html">about me</a>
     <a href="skills.html">skills</a>
-    <a href="funfact.html">fun-fact</a>
+    <a href="funfact.html">fun-Fact</a>
     <a href="mailto:shivamkumarjha0825@gmail.com">contact Me</a>
-    <a href="team.html">Team Members</a>
+    <a href="team.html">Meet My Team</a>
     <a href="mailto:shivamjha082001@gmail.com">Contact My Team</a>
 </nav>
 <button type="submit">
