some_changes_in_teams_page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<!-- <body background = "/shivam kumar photo.jpg"> -->
     <header>
         <div class="waviy">
             <span style="--i:1">S</span>
@@ -39,7 +39,7 @@
     </a>
 </button>
 </header>
-<div class="content">
+<div class="content"  >
     <div class="message">
         <div class="words word-1">
             <span>W</span>
