--- a/team.html
+++ b/team.html
@@ -53,7 +53,7 @@
               </a>
             </span>
           </div>
-          <p class="leading-relaxed">I am B.tech sophomore Student majoring in industrial internet of things. Interested in Website Development. </p>
+          <p class="leading-relaxed">I am B.tech sophomore Student majoring in industrial internet of things. Interested in Website Development.handson experience on HTML , CSS, JS ,SQL </p>
           
           </div>
           <div class="flex">
@@ -115,7 +115,7 @@
               </a>
             </span>
           </div>
-          <p class="leading-relaxed">I am B.tech sophomore Student majoring in industrial internet of things. Interested in Website Development and contributed towards open source from past few months. </p>
+          <p class="leading-relaxed">I am B.tech sophomore Student majoring in industrial internet of things. Interested in Website Development and contributed towards open source from past few months. Handson experience on HTML, CSS, JS, UX DESIGNER, CONTENT CREATION</p>
           
           </div>
           <div class="flex">
