contact team from header is removed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href="funfact.html">fun-Fact</a>
     <a href="mailto:shivamkumarjha0825@gmail.com">contact Me</a>
     <a href="team.html">Meet My Team</a>
-    <a href="mailto:shivamjha082001@gmail.com">Contact My Team</a>
+    <!-- <a href="mailto:shivamjha082001@gmail.com">Contact My Team</a> -->
 </nav>
 <button type="submit">
     <a href="resume-2nd year.pdf" target="_blank">resume
